<resources>
    <string name="app_name">MinhaProva</string>
    <string name="button1">Botão 1</string>
    <string name="button2">Botão 2</string>
    <string name="button3">Botão 3</string>
    <string name="button4">Botão 4</string>
    <string name="text1">Texto</string>
    <string name="text2">Texto</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnOk">OK</string>
    <string name="edtValor">Digite um valor</string>
    <string name="otimo">Ótimo!</string>
    <string name="prox">Fica para a próxima</string>
    <string name="titulo">Titulo</string>
    <string name="autor">Autor</string>
    <string name="ano">Ano</string>
    <string name="nota">Nota</string>
    <string name="btnAnterior">Anterior</string>
    <string name="btnProximo">Proximo</string>

</resources>