<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="vm"
            type="com.example.minhaprova.ViewModelTexto" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/text1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@{vm.texto1.toString()}" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@{vm.texto2.toString()}" />

        <Button
            android:id="@+id/button1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/button1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/button2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/button3" />

        <Button
            android:id="@+id/button4"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/button4" />
    </LinearLayout>
</layout>
